--- a/package.json
+++ b/package.json
@@ -11,11 +11,21 @@
     },
     "devDependencies": {
         "axios": "^0.19",
+        "bootstrap": "^4.3.1",
+        "bootstrap-vue": "^2.1.0",
         "cross-env": "^5.1",
+        "jquery": "^3.2",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.13",
+        "node-sass": "^4.13.0",
+        "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
-        "sass": "^1.15.2",
-        "sass-loader": "^7.1.0"
+        "sass": "^1.20.1",
+        "sass-loader": "^7.0.0",
+        "vue": "^2.6.10",
+        "vue-router": "^2.7.0",
+        "vue-template-compiler": "^2.6.10",
+        "vuex": "^3.1.0",
+        "webpack": "^4.41.2"
     }
 }
